--- a/package.json
+++ b/package.json
@@ -134,9 +134,7 @@
     "update": "npx npm-check-updates -u -t minor",
     "update-major": "npx npm-check-updates -u"
   },
-  "dependencies": {
-    "yargs": "17.7.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@duckdb/duckdb-wasm": "1.28.1-dev106.0",
     "@eslint/js": "^9.8.0",
